--- a/app/assets/stylesheets/core/_buttons.scss
+++ b/app/assets/stylesheets/core/_buttons.scss
@@ -31,43 +31,16 @@
     @include prefix(transform, translateY(0));
   }
 
-  &.icon:before {
-    content: "";
+  span {
     float: left;
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 36px;
     height: 36px;
     background-color: rgba(0, 0, 0, .3);
     @include prefix(transform, translateX(-36px));
     border-radius: 5px 0 0 5px;
-
-    &.add {
-      @include background("icons/add.svg", 24px);
-    }
-
-    &.back {
-      @include background("icons/back.svg", 16px);
-    }
-
-    &.cancel {
-      @include background("icons/cancel.svg", 16px);
-    }
-
-    &.edit {
-      @include background("icons/edit.svg", 16px);
-    }
-
-    &.filter {
-      @include background("icons/filter.svg", 16px);
-    }
-
-    &.password {
-      @include background("icons/password.svg", 20px);
-    }
-
-    &.save {
-      @include background("icons/save.svg", 20px);
-    }
   }
 }
 
@@ -95,30 +68,28 @@
 }
 
 .btn-icon {
-  @extend .btn;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  min-width: auto;
   width: 40px;
   height: 40px;
-  padding: 0;
   border-radius: 50%;
-  overflow: hidden;
-  position: relative;
+  background-color: rgba(#aaa, .5);
+  @include prefix(transition, .25s cubic-bezier(.075,.82,.165,1));
+  @include prefix(box-shadow, 0 10px 10px rgba(0, 0, 0, 0.1));
 
-  img {
-    width: 16px;
-    height: 16px;
+  &:hover {
+    background-color: rgba($dark-blue, .5);
+
+    span {
+      color: $dark-blue;
+    }
   }
 
-  &:before {
-    content: "";
-    width: 100%;
-    height: 50%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.2);
+  span {
+    color: #aaa;
+    cursor: pointer;
+    z-index: 5;
   }
 }
