--- a/app/assets/stylesheets/modules/orders.scss
+++ b/app/assets/stylesheets/modules/orders.scss
@@ -107,7 +107,6 @@
 
 					  .order-card-body, .order-card-footer {
 					  	display: flex;
-					  	justify-content: center;
 					  }
 
 					  .order-card-body {
@@ -115,13 +114,19 @@
 					  	padding: 15px;
 					  	width: 100%;
 					  	flex-direction: column;
+					  	justify-content: center;
 					  }
 
 					  .order-card-footer {
+					  	width: 200px;
 					  	align-items: center;
 					  	padding: 15px;
 
-					  	span {
+					  	.options {
+					  		bottom: 0;
+					  	}
+
+					  	> span {
 					  		padding: 0 25px 0 0;
 					  	}
 					  }
@@ -224,26 +229,28 @@
 					}
 
 					.order-card-footer {
+						display: flex;
+						align-items: flex-end;
+						justify-content: space-between;
 						position: relative;
-						padding: 15px;
+						padding: 15px 5px 15px 15px;
 
-						span {
+						> span {
 							color: rgba(0, 0, 0, 0.5);
 							font-size: .9em;
 							font-weight: 600;
 						}
 
 						.options {
-							position: absolute;
-							right: 0;
-							bottom: 0;
+							position: relative;
+							bottom: -5px;
 
 							.options-btn {
-								margin: 0 5px 15px 0;
-								width: 16px;
-						    height: 16px;
 						    display: inline-block;
-						    opacity: .5;
+
+						    span {
+						    	color: #aaa;
+						    }
 							}
 						}
 					}
@@ -328,7 +335,7 @@
 				}
 
 				.updated-at {
-					font-size: .75em;
+					font-size: .9em;
 					font-style: italic;
 					color: #d6d6d6;
 				}
@@ -417,9 +424,5 @@
 				}
 			}
 		}
-	}
-
-	.search_list {
-		display: none;
 	}
 }
