--- a/app/views/stuffs/index.html.erb
+++ b/app/views/stuffs/index.html.erb
@@ -3,5 +3,70 @@
 
 	<div class="container main-container">
 		<%= flash_message %>
+
+		<header class="container-header">
+			<h1 class="header-title">Lista de <span>equipamentos</span></h1>
+		</header>
+
+		<%= form_tag(stuffs_path, method: :get, class: "filters form") do %>
+			<div class="row">
+				<div class="search col-3" id="autocomplete-category">
+					<%= search_field_tag :id, params[:id], placeholder: "Número da OS" %>
+				</div>
+
+				<div class="search col-3" id="autocomplete-patrimony">
+					<%= autocomplete_field_tag :patrimony, params[:patrimony], autocomplete_stuff_patrimony_orders_path, placeholder: "Patrimônio", append_to: "#autocomplete-patrimony",'data-showNoMatches' => false, title: "Digite S/P para pesquisar chamados sem patrimônio" %>
+				</div>
+
+				<div class="search col-3" id="autocomplete-category">
+					<%= search_field_tag :category, params[:category], placeholder: "Categoria. Ex.: PC, impressora, monitor.." %>
+					<% list_categories.each do |category| %>
+				    <%= content_tag :div, category, class: "search_list list_categories" %>
+					<% end %>
+				</div>
+
+				<div class="search col-3" id="autocomplete-brand">
+					<%= search_field_tag :brand, params[:brand], placeholder: "Marca/modelo. Ex.: Acer, Dell, Positivo.." %>
+					<% list_brands.each do |brand| %>
+				    <%= content_tag :div, brand, class: "search_list list_brands" %>
+					<% end %>
+				</div>
+			</div>
+
+			<%= submit_tag ("Buscar") %>
+		<% end %>
+
+		<section class="container-body">
+			<% unless @stuffs.nil? || @stuffs.blank? %>
+				<ul class="responsive-table">
+					<li class="table-header">
+						<div class="table-col table-col-5"><%= link_to("#", request.params.merge(sort_by: "id"), class: ("active" if params[:sort_by] == "id")) %></div>
+						<div class="table-col table-col-15"><%= link_to("Patrimônio", request.params.merge(sort_by: "patrimony"), class: ("active" if params[:sort_by] == "patrimony")) %></div>
+						<div class="table-col table-col-15"><%= link_to("Categoria", request.params.merge(sort_by: "category"), class: ("active" if params[:sort_by] == "category")) %></div>
+						<div class="table-col table-col-15"><%= link_to("Marca/Modelo", request.params.merge(sort_by: "brand"), class: ("active" if params[:sort_by] == "brand")) %></div>
+						<div class="table-col table-col-40"><%= link_to("Unidade", request.params.merge(sort_by: "schools.name"), class: ("active" if params[:sort_by] == "schools.name")) %></div>
+						<div class="table-col table-col-10">Opções</div>
+					</li>
+
+					<% @stuffs.each do |s| %>
+						<li class="table-row">
+							<div class="table-col table-col-5"><strong><%= s.id %></strong></div>
+							<div class="table-col table-col-15"><%= s.patrimony.presence || "S/P" %></div>
+							<div class="table-col table-col-15"><%= s.category %></div>
+							<div class="table-col table-col-15"><%= s.brand %></div>
+							<div class="table-col table-col-40"><%= s.school.name %></div>
+							<div class="table-col table-col-10">
+								<div class="options">
+				          <%= link_to edit_stuff_path(s), alt: "Editar", title: "Editar", class: "btn-icon" do %><span class="material-icons md-20">edit</span><% end %>
+				          <%= link_to destroy_stuff_path(s), alt: "Apagar", title: "Apagar", method: :delete, data: { confirm: "Tem certeza? Essa ação é irreversível." }, class: "btn-icon" do %><span class="material-icons md-20">delete</span><% end %>
+								</div>
+							</div>
+						</li>
+					<% end %>
+				</ul>
+			<% else %>
+				<h3 class="text-center m-t-50"><i>Nenhum equipamento encontrado.</i></h3>
+			<% end %>
+		</section>
 	</div>
 </div>
