--- a/app/views/users/edit_password.html.erb
+++ b/app/views/users/edit_password.html.erb
@@ -21,8 +21,8 @@
         </div>
 
         <div class="actions m-t-50">
-          <%= link_to "#", onclick: "$('.form').submit()", data: { disable_with: "Aguarde..." }, class: "btn-success icon save" do %>Salvar<% end %>
-          <%= link_to profile_path, class: "btn-cancel icon back" do %>Voltar<% end %>
+          <%= link_to "#", onclick: "$('.form').submit()", data: { disable_with: "Aguarde..." }, class: "btn-success icon" do %><span class="material-icons md-16 md-light">done</span>Salvar<% end %>
+          <%= link_to profile_path, class: "btn-cancel icon" do %><span class="material-icons md-16">undo</span>Voltar<% end %>
         </div>
       <% end %>
     </section>
