--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,8 +5,7 @@
 		<%= flash_message %>
 		
 		<header class="container-header">
-			<p class="header-subtitle">Bem vindo,</p>
-			<h1 class="header-title"><span><%= username %>!</span></h1>
+			<h1 class="header-title">Bem vindo, <span><%= username %>!</span></h1>
 		</header>
 
 		<section class="container-body">
