added fields to orders search

--- a/app/assets/stylesheets/modules/orders.scss
+++ b/app/assets/stylesheets/modules/orders.scss
@@ -62,7 +62,7 @@
 				grid-gap: 25px 2.5%;
 				grid-template-columns: 1fr 1fr 1fr 1fr;
 
-				&.as-list {
+				&.list {
 					grid-template-columns: 1fr;
 
 					.order-card {
