--- a/app/assets/stylesheets/base/_media.scss
+++ b/app/assets/stylesheets/base/_media.scss
@@ -52,7 +52,7 @@
       flex-direction: column;
       gap: 15px;
 
-      .as-grid, .as-list {
+      .grid, .list {
         display: none;
       }
     }
